--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boolfix</title>
+    <script src="https://kit.fontawesome.com/1ac9a063d3.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
